src/quick/items/qquickgridview.cpp
@@ -2381,11 +2381,12 @@ bool QQuickGridViewPrivate::applyInsertionChange(const QQmlChangeSet::Change &ch
         int i = count - 1;
         int from = tempPos - buffer - displayMarginBeginning;
 
-        while (i >= 0) {
-            if (rowPos > from && insertionIdx < visibleIndex) {
-                // item won't be visible, just note the size for repositioning
-                insertResult->countChangeBeforeVisible++;
-            } else {
+        if (rowPos > from && insertionIdx < visibleIndex) {
+                // items won't be visible, just note the size for repositioning
+                insertResult->countChangeBeforeVisible += count;
+                insertResult->sizeChangesBeforeVisiblePos += ((count + columns - 1) / columns) * rowSize();
+        } else {
+            while (i >= 0) {
                 // item is before first visible e.g. in cache buffer
                 FxViewItem *item = 0;
                 if (change.isMove() && (item = currentChanges.removedItems.take(change.moveKey(modelIndex + i))))
@@ -2401,19 +2402,40 @@ bool QQuickGridViewPrivate::applyInsertionChange(const QQmlChangeSet::Change &ch
                     insertResult->changedFirstItem = true;
                 if (!change.isMove()) {
                     addedItems->append(item);
-                    item->transitionNextReposition(transitioner, QQuickItemViewTransitioner::AddTransition, true);
+                    if (transitioner)
+                        item->transitionNextReposition(transitioner, QQuickItemViewTransitioner::AddTransition, true);
+                    else
+                        item->moveTo(QPointF(colPos, rowPos), true);
                 }
                 insertResult->sizeChangesBeforeVisiblePos += rowSize();
-            }
 
-            if (--colNum < 0 ) {
-                colNum = columns - 1;
-                rowPos -= rowSize();
+                if (--colNum < 0 ) {
+                    colNum = columns - 1;
+                    rowPos -= rowSize();
+                }
+                colPos = colNum * colSize();
+                index++;
+                i--;
             }
-            colPos = colNum * colSize();
-            index++;
-            i--;
         }
+
+        // There may be gaps in the index sequence of visibleItems because
+        // of the index shift/update done before the insertion just above.
+        // Find if there is any...
+        int firstOkIdx = -1;
+        for (int i = 0; i <= insertionIdx && i < visibleItems.count() - 1; i++) {
+            if (visibleItems.at(i)->index + 1 != visibleItems.at(i + 1)->index) {
+                firstOkIdx = i + 1;
+                break;
+            }
+        }
+        // ... and remove all the items before that one
+        for (int i = 0; i < firstOkIdx; i++) {
+            FxViewItem *nvItem = visibleItems.takeFirst();
+            addedItems->removeOne(nvItem);
+            removeItem(nvItem);
+        }
+
     } else {
         int i = 0;
         int to = buffer+displayMarginEnd+tempPos+size()-1;
@@ -2438,7 +2460,10 @@ bool QQuickGridViewPrivate::applyInsertionChange(const QQmlChangeSet::Change &ch
                     movingIntoView->append(MovedItem(item, change.moveKey(item->index)));
             } else {
                 addedItems->append(item);
-                item->transitionNextReposition(transitioner, QQuickItemViewTransitioner::AddTransition, true);
+                if (transitioner)
+                    item->transitionNextReposition(transitioner, QQuickItemViewTransitioner::AddTransition, true);
+                else
+                    item->moveTo(QPointF(colPos, rowPos), true);
             }
             insertResult->sizeChangesAfterVisiblePos += rowSize();
 
